--- a/stylesheet.css
+++ b/stylesheet.css
@@ -842,8 +842,9 @@ html, body {
   .header {
     padding: 24px 0;
     margin-bottom: 40px;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .nav {
