--- a/stylesheet.css
+++ b/stylesheet.css
@@ -995,6 +995,7 @@ html.dark-mode .toggle-icon-light {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  color: (--var:accent-blue);
 }
 
 .social-link:hover .social-icon {
