--- a/stylesheet.css
+++ b/stylesheet.css
@@ -995,10 +995,9 @@ html.dark-mode .toggle-icon-light {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  color: (--var:accent-blue);
 }
 
-.social-link:hover .social-icon {
+.social-icon {
   filter: brightness(0) saturate(100%) invert(41%) sepia(96%) saturate(649%) hue-rotate(202deg) brightness(99%) contrast(102%);
 }
 
