fixed link for all projects

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -587,11 +587,13 @@ html.dark-mode .toggle-icon-light {
   position: relative;
   box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
   justify-content: center;
+  text-decoration: none;
 }
 
 .small-project-card:hover {
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
   transform: translateY(-3px);
+  text-decoration: none;
 }
 
 .small-card-logo {
