--- a/stylesheet.css
+++ b/stylesheet.css
@@ -926,8 +926,9 @@ html.dark-mode .toggle-icon-light {
   }
 
   .card-product-price {
-    font-size: 20px;
+    font-size: 18px;
     padding: 0 4px;
+    padding-bottom: 10px;
     line-height: 1.1;
   }
 
